--- a/nlpa.ipynb
+++ b/nlpa.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "8f30edef",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/matthias/anaconda3/envs/nlp2/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -35,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "3842a576",
    "metadata": {},
    "outputs": [
@@ -82,13 +90,41 @@
       "1  December 29, 2017   \n",
       "2  December 31, 2017   \n",
       "3  December 30, 2017   \n",
-      "4  December 29, 2017   \n"
+      "4  December 29, 2017   \n",
+      "Combined dataset shape: (44898, 5)\n",
+      "                                               title  \\\n",
+      "0   Donald Trump Sends Out Embarrassing New Year’...   \n",
+      "1   Drunk Bragging Trump Staffer Started Russian ...   \n",
+      "2   Sheriff David Clarke Becomes An Internet Joke...   \n",
+      "3   Trump Is So Obsessed He Even Has Obama’s Name...   \n",
+      "4   Pope Francis Just Called Out Donald Trump Dur...   \n",
+      "\n",
+      "                                                text subject  \\\n",
+      "0  Donald Trump just couldn t wish all Americans ...    News   \n",
+      "1  House Intelligence Committee Chairman Devin Nu...    News   \n",
+      "2  On Friday, it was revealed that former Milwauk...    News   \n",
+      "3  On Christmas day, Donald Trump announced that ...    News   \n",
+      "4  Pope Francis used his annual Christmas Day mes...    News   \n",
+      "\n",
+      "                date label  \n",
+      "0  December 31, 2017  fake  \n",
+      "1  December 31, 2017  fake  \n",
+      "2  December 30, 2017  fake  \n",
+      "3  December 29, 2017  fake  \n",
+      "4  December 25, 2017  fake  \n"
      ]
     }
    ],
    "source": [
     "print(df_fake.head())\n",
-    "print(df_true.head())"
+    "print(df_true.head())\n",
+    "\n",
+    "df_fake[\"label\"] = \"fake\"\n",
+    "df_true[\"label\"] = \"real\"\n",
+    "\n",
+    "df = pd.concat([df_fake, df_true]).reset_index(drop=True)\n",
+    "print(\"Combined dataset shape:\", df.shape)\n",
+    "print(df.head())"
    ]
   }
  ],
